tests/errors/4_type_errors/boolop-test22.ifj.java
class Main {
    static void run() {
        double a = 5.5;
        if(a) { // using double as a logical operator

        }
        
    }
}